# Parallel_programming

./: .gitignore  README.md
Exponent/: CMakeLists.txt  main.cpp  results.txt  times txt
Introductory_tasks/: ex_1  ex_1.cpp  ex_2  ex_2.cpp  ex_3  ex_3.cpp
Introductory_tasks_pthreads/: hello_world  hello_world.cpp  mutex  mutex.cpp  sum  sum.cpp
Lab_1/: CMakeLists.txt  plotter.ipynb
Lab_1/constants_calculation/: main  main.cpp
Lab_1/include/: schemes.h
Lab_1/src/: main.cpp  schemes.cpp  solver.cpp
Lab_2/: main  main.cpp  out.csv  plotter.ipynb
MPI_Send/: CMakeLists.txt  main.cpp
Sort/: CMakeLists.txt  plotter.ipynb
Sort/include/: SortingNetwork.h  parallel_sort.h  sorting_network.h
Sort/src/: SortingNetwork.cpp  main.cpp  parallel_sort.cpp  sorting_network.cpp
Test/: CMakeLists.txt  main.cpp
